[fix] re-align shipping methods only on mobile

--- a/app/assets/stylesheets/redesign/pages/_page-checkout.scss
+++ b/app/assets/stylesheets/redesign/pages/_page-checkout.scss
@@ -318,14 +318,7 @@
         line-height: 32px;
 
         .price-wrapper {
-          float: none;
           width: initial;
-        }
-
-        .delivered-in-wrapper {
-          margin: 10px 0 20px 3px;
-          font-size: 1.4rem;
-          font-style: italic;
         }
 
       }
@@ -346,6 +339,21 @@
       .delivery-options {
         width: 100%;
       }
+
+      .delivery-time-label-mobile {
+
+        .price-wrapper {
+          float: none;
+        }
+
+        .delivered-in-wrapper {
+          margin: 10px 0 20px 3px;
+          font-size: 1.4rem;
+          font-style: italic;
+        }
+
+      }
+
     }
 
   }
